# gretchen_head_tutorial

./: .gitmodules  README.md
course_material/week_4/: homework_1_get_image.py  homework_1_get_image_solution.py  homework_2_get_pixel.py  homework_2_get_pixel_solution.py  homework_3_draw.py  homework_4_move_motor.py  homework_4_move_motor_solution.py  homework_5_move_motor.py  homework_5_move_motor_solution.py
course_material/week_5/: homework_1_color_thresholding.py  homework_1_color_thresholding_solution.py  homework_2_ball_detector.py  homework_2_detect_ball.py  homework_2_detect_ball_solution.py  homework_3_2d_tracking.py  homework_3_2d_tracking_solution.py  homework_3_2d_tracking_solution2.py  homework_4_3d_tracking.py  homework_4_3d_tracking_solution.py
course_material/week_6/: homework_1_detect_face.py  homework_1_detect_face_solution.py  homework_2_face_pose_estimation.py  homework_2_face_pose_estimation_solution.py  homework_3_look_left_right.py  homework_3_look_left_right_solution.py  homework_4_look_left_right_motion.py  homework_4_look_left_right_motion_solution.py  homework_5_track_face.py  homework_5_track_face_solution.py  homework_6_track_face_pose.py  homework_6_track_face_pose_solution.py
course_material/week_7/: example_3_detect_webcam_cont.py  homework_1_change_model.py  homework_1_change_model_solution.py  (+6 more)
dynamixel_ros/: CMakeLists.txt  package.xml
gretchen-head-controller/: CMakeLists.txt  README.md  package.xml  view.rviz
gretchen-head-controller/config/: head_controller.yaml
gretchen-head-controller/launch/: controller.launch  slider_controller.launch
gretchen-head-controller/src/: head.hpp  head_hw_interface.cpp  head_manual_hw_interface.cpp
gretchen-head-controller/urdf/: body.urdf.xacro  pan_tilt.urdf.xacro
gretchen-head-controller/urdf/sensors/: ftsensor.gazebo.xacro  ftsensor.urdf.xacro  openni.gazebo.xacro  xtion_pro_live.urdf.xacro
(+24 files in other folders)
