<?xml version="1.0"?>
<package>
  <name>gretchen_head_controller</name>
  <version>0.0.0</version>
  <description>The control_test package</description>
  <maintainer email="aibrain@aibrain.com">aibrain</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>controller_manager</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>trajectory_msgs</run_depend>
  <build_depend>control_msgs</build_depend>
  <run_depend>control_msgs</run_depend>
  

</package>